--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body {
 	background: #F0FFF0;
 	margin-bottom: 20px; 
 	background-color: #F0FFF0;
+	width: 100%;
 } 
 
 
@@ -70,6 +71,7 @@ body {
 	padding: 20px;
 	background: #D3D3D3;
 	margin-bottom: 20px;
+	width: 100%;
 }
 
 .card_1 h2 {
@@ -77,23 +79,20 @@ body {
 }
 
 
-/* a {
-	transition: all .1s;
-text-decoration: none;
-} */
-/* a:hover {
+
+a:hover {
 	text-decoration: underline;
 	color: red;
 	font-size: 1.1rem;
-} */
+}
 
-/* .btn1 {
+.btn1 {
 	background-color: black;
 	color: white;
 	padding: 10px 30px;
 	border-radius: 5px;
 	opacity: 0.8;
-} */
+}
 
 .btn {
 	background-color: black;
